Fix books flicker

--- a/server/modules/book-page/ui/src/index.scss
+++ b/server/modules/book-page/ui/src/index.scss
@@ -420,6 +420,7 @@
     }
     @media (min-width: map-get($breakpoints, 'md')) {
       row-gap: 4px;
+      min-height: 650px;
     }
 
     .pdl-book-preview {
